# libpressio-sperr

./: .gitignore  CMakeLists.txt  LibPressioSperrConfig.cmake.in  README.md
include/: libpressio-sperr.h
src/: libpressio-sperr.cc
